# mioty-homeassistant-addon

./: .gitignore  .replit  Dockerfile  LICENSE  README.md  build.yaml  config.yaml  configuration.yaml  demo_run.py  ha_sensor_metadata.json  ha_test.db  ha_test.db-shm  ha_test.db-wal  hacs.json  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal  iolink_adapter_registry.json  manual_basestation_metadata.json  manual_sensor_metadata.json  pyproject.toml  replit.md  repository.yaml  requirements.txt  run.sh  sensor_configs.json  sentinum_logo.txt  settings.json
.storage/: assist_pipeline.pipelines  auth  core.config_entries  core.device_registry  core.entity_registry  core.uuid  homeassistant.exposed_entities  http  http.auth  repairs.issue_registry
app/: decoder_manager.py  main.py  mqtt_manager.py  payload_decoder.py  service_center_api.py  settings_manager.py  web_gui.py
attached_assets/: Pasted--10-58-14-INFO-Starte-mioty-Application-Center-10-58-14-INFO-MQTT-Broker-192-168-0-156-188-1756544522375_1756544522378.txt  Pasted--14-13-24-INFO-Starte-mioty-Application-Center-14-13-24-INFO-MQTT-Broker-192-168-0-156-188-1756556072412_1756556072414.txt  Pasted-2025-09-03-16-27-58-107-root-INFO-X-Forwarded-Host-192-168-0-177-8123-2025-09-03-16-27-58-1756909749028_1756909749030.txt  Pasted-2025-09-03-16-38-19-548-root-INFO-Accept-Encoding-gzip-deflate-2025-09-03-16-38-19-549--1756910348461_1756910348461.txt  Pasted-2025-09-03-16-51-57-558-root-INFO-2025-09-03-16-51-5-1756911147882_1756911147883.txt  README_1756477397204.md  (+15 more)
(+54 files in other folders)
