[project]
name = "repl-nix-workspace"
version = "0.2.1"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bitstring>=4.3.1",
    "cffi>=2.0.0",
    "cryptography>=42,<44",
    "lxml>=6.0.2",
    "paho-mqtt>=1.6.0",
    "pycryptodomex>=3.20",
    "voluptuous>=0.15.2",
]
